# genetic_agorithm

./: .gitignore  CMakeLists.txt  README.md
cmake-utilits/: templates.cmake
lib/genetic_lib/: CMakeLists.txt  genetic.hpp
lib/genetic_lib/include/: base.hpp  genetic_algorithm.hpp  genetic_utilits_contaner.hpp  genetiic_interfaces.hpp
lib/genetic_lib/include/ser_lib/: ISer.h  contexts.h  stream.h  stream_read.h  stream_writer.h
lib/genetic_lib/src/: genetic_algorithm.cpp  genetic_utilits_contaner.cpp
lib/thread_pool_lib/: CMakeLists.txt
lib/thread_pool_lib/include/: parallel.hpp
lib/thread_pool_lib/src/: parallel.cpp
old/: Agent.cpp  Agent.h  Evolution.cpp  Evolution.h  Game.cpp  Game.h  GeneticAlgorithm.h  Genotype.cpp  Genotype.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuronalLayer.cpp  NeuronalLayer.h  Snake.cpp  Snake.h  main.cpp
src/: main.cpp
